test/spec/simd/simd_f32x4.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/simd/simd_f32x4.wast
;;; ARGS*: --enable-simd
(;; STDOUT ;;;
out/test/spec/simd/simd_f32x4.wast:2325: assert_malformed passed:
  out/test/spec/simd/simd_f32x4/simd_f32x4.1.wat:1:33: error: unexpected token "i8x16.abs", expected an instr.
  (memory 1) (func (result v128) (i8x16.abs (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^
out/test/spec/simd/simd_f32x4.wast:2326: assert_malformed passed:
  out/test/spec/simd/simd_f32x4/simd_f32x4.2.wat:1:33: error: unexpected token "i8x16.min", expected an instr.
  (memory 1) (func (result v128) (i8x16.min (v128.const i32x4 0 0 0 0) (v128.co...
                                  ^^^^^^^^^
out/test/spec/simd/simd_f32x4.wast:2327: assert_malformed passed:
  out/test/spec/simd/simd_f32x4/simd_f32x4.3.wat:1:33: error: unexpected token "i8x16.max", expected an instr.
  (memory 1) (func (result v128) (i8x16.max (v128.const i32x4 0 0 0 0) (v128.co...
                                  ^^^^^^^^^
out/test/spec/simd/simd_f32x4.wast:2328: assert_malformed passed:
  out/test/spec/simd/simd_f32x4/simd_f32x4.4.wat:1:33: error: unexpected token "i16x8.abs", expected an instr.
  (memory 1) (func (result v128) (i16x8.abs (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^
out/test/spec/simd/simd_f32x4.wast:2329: assert_malformed passed:
  out/test/spec/simd/simd_f32x4/simd_f32x4.5.wat:1:33: error: unexpected token "i16x8.min", expected an instr.
  (memory 1) (func (result v128) (i16x8.min (v128.const i32x4 0 0 0 0) (v128.co...
                                  ^^^^^^^^^
out/test/spec/simd/simd_f32x4.wast:2330: assert_malformed passed:
  out/test/spec/simd/simd_f32x4/simd_f32x4.6.wat:1:33: error: unexpected token "i16x8.max", expected an instr.
  (memory 1) (func (result v128) (i16x8.max (v128.const i32x4 0 0 0 0) (v128.co...
                                  ^^^^^^^^^
out/test/spec/simd/simd_f32x4.wast:2331: assert_malformed passed:
  out/test/spec/simd/simd_f32x4/simd_f32x4.7.wat:1:33: error: unexpected token "i32x4.abs", expected an instr.
  (memory 1) (func (result v128) (i32x4.abs (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^
out/test/spec/simd/simd_f32x4.wast:2332: assert_malformed passed:
  out/test/spec/simd/simd_f32x4/simd_f32x4.8.wat:1:33: error: unexpected token "i32x4.min", expected an instr.
  (memory 1) (func (result v128) (i32x4.min (v128.const i32x4 0 0 0 0) (v128.co...
                                  ^^^^^^^^^
out/test/spec/simd/simd_f32x4.wast:2333: assert_malformed passed:
  out/test/spec/simd/simd_f32x4/simd_f32x4.9.wat:1:33: error: unexpected token "i32x4.max", expected an instr.
  (memory 1) (func (result v128) (i32x4.max (v128.const i32x4 0 0 0 0) (v128.co...
                                  ^^^^^^^^^
out/test/spec/simd/simd_f32x4.wast:2334: assert_malformed passed:
  out/test/spec/simd/simd_f32x4/simd_f32x4.10.wat:1:33: error: unexpected token "i64x2.abs", expected an instr.
  (memory 1) (func (result v128) (i64x2.abs (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^
out/test/spec/simd/simd_f32x4.wast:2335: assert_malformed passed:
  out/test/spec/simd/simd_f32x4/simd_f32x4.11.wat:1:33: error: unexpected token "i64x2.min", expected an instr.
  (memory 1) (func (result v128) (i64x2.min (v128.const i32x4 0 0 0 0) (v128.co...
                                  ^^^^^^^^^
out/test/spec/simd/simd_f32x4.wast:2336: assert_malformed passed:
  out/test/spec/simd/simd_f32x4/simd_f32x4.12.wat:1:33: error: unexpected token "i64x2.max", expected an instr.
  (memory 1) (func (result v128) (i64x2.max (v128.const i32x4 0 0 0 0) (v128.co...
                                  ^^^^^^^^^
out/test/spec/simd/simd_f32x4.wast:2339: assert_invalid passed:
  error: type mismatch in f32x4.abs, expected [v128] but got [i32]
  000001d: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_f32x4.wast:2340: assert_invalid passed:
  error: type mismatch in f32x4.min, expected [v128, v128] but got [i32, f32]
  0000022: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_f32x4.wast:2341: assert_invalid passed:
  error: type mismatch in f32x4.max, expected [v128, v128] but got [i32, f32]
  0000022: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_f32x4.wast:2346: assert_invalid passed:
  error: type mismatch in f32x4.abs, expected [v128] but got []
  000001b: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_f32x4.wast:2354: assert_invalid passed:
  error: type mismatch in f32x4.min, expected [v128, v128] but got [v128]
  000002d: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_f32x4.wast:2362: assert_invalid passed:
  error: type mismatch in f32x4.min, expected [v128, v128] but got []
  000001b: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_f32x4.wast:2370: assert_invalid passed:
  error: type mismatch in f32x4.max, expected [v128, v128] but got [v128]
  000002d: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_f32x4.wast:2378: assert_invalid passed:
  error: type mismatch in f32x4.max, expected [v128, v128] but got []
  000001b: error: OnBinaryExpr callback failed
792/792 tests passed.
;;; STDOUT ;;)
